2.k8s/rails_app_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
        - name: rails
          image: 1rail_app-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
