2.k8s/postgres_service.yml
# postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails
spec:
  ports:
    - port: 3000
  selector:
    app: rails
  type: ClusterIP
