2.k8s/rails_service.yml
# rails_service.yml
apiVersion: v1
kind: Service
metadata:
  name: rails
spec:
  selector:
    app: rails
  ports:
    - port: 3000
  type: ClusterIP
