2.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rails.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rails
                port:
                  number: 3000
